# ip-checker

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: country_flags.py  main.py
app/api/v1/: __init__.py  ip.py
app/schemas/: ip.py
app/services/: country_flag.py  geoip.py  ping.py
tests/: conftest.py  test_country_flag.py  test_geoip_service.py  test_health.py  test_ip_api.py
