[project]
name = "ip-checker"
version = "0.1.0"
description = "FastAPI microservice: GeoIP (MMDB), country flag emoji, TCP reachability."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "geoip2>=4.8.0",
    "pydantic>=2.6.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
